# bttb

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_WINDOWS.md  SECURITY.md  privacy.txt
docs/: BTTB.xml  contact.html  elwin.html  faq.html  history.html  index.htm  index.html  news.html  overview.html  overview_de.html  overview_el.html  overview_elv.html  overview_es.html  overview_fr.html  overview_hi.html  overview_it.html  overview_ja.html  overview_la.html  overview_nl.html  overview_pt.html  overview_vul.html  overview_zh.html  pad_file.xml
docs/Help/: bttb_contact.html  bttb_createiso.html  bttb_enablegroup.html  bttb_faq.html  bttb_fillmedium.html  bttb_foldersplit.html  bttb_groupcreation.html  bttb_infoscreen.html  bttb_keepsplitted.html  bttb_mainscreen.html  bttb_medium.html  bttb_movefolder.html  bttb_processempty.html  bttb_progress.html  bttb_quickstart.html  bttb_searchtime.html  bttb_selectmedium.html  bttb_showfoldernames.html  bttb_splitdepth.html  bttb_start.html  bttb_status.html  bttb_treeview.html  bttb_whatis.html  bttb_whatsnew.html  index.html
lang/: de.po  el.po  elv.po  es.po  fr.po  hi.po  it.po  ja.po  la.po  nl.po  pt.po  vul.po  zh.po
scratch/: bttb_installer.nsi  bttb_installer.wxs  bundle_dlls.py  generate_po.py  keys.json  package_release.py  test_testje.cpp  translate_tutorial.py
src/: bttb.manifest  bttb.rc  bttb_embed.py  bttb_locale.cpp  bttb_locale.hpp  bttb_logic.cpp  bttb_logic.hpp  cli_engine.hpp  main.cpp  main_win.cpp  main_win32.cpp  test_solver.cpp  ui_iso.cpp  ui_iso.hpp  ui_main.cpp  ui_main.hpp  ui_settings.cpp  ui_settings.hpp  ui_verify.cpp  ui_verify.hpp
src/blake3/: Acknowledgement.txt
src/leopard/: Acknowledgement.txt
src/libpar3/: Acknowledgement.txt  file.c  libpar3.c  libpar3_verify.c  reedsolomon8.c  write.c  write_trial.c
src/platform/linux/: filesearch.c
src/platform/windows/: get_absolute_path.c  platform_windows.h
web/htdocs/: BTTB.xml  history.html  index.htm  index.html  news.html  overview.html  pad_file.xml
web/htdocs/Help/: bttb_contact.html  bttb_createiso.html  bttb_enablegroup.html  bttb_faq.html  bttb_mainscreen.html  bttb_movefolder.html  bttb_progress.html  bttb_searchtime.html  bttb_selectmedium.html  bttb_showfoldernames.html  bttb_splitdepth.html  bttb_whatis.html  bttb_whatsnew.html  index.html
